# gg_os

./: Cargo.toml  Makefile  README.md  Xargo.toml
src/: gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  long_mode_init.asm  multiboot_header.asm
src/memory/: frame_allocator.rs  heap_allocator.rs  mod.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
