[package]
name = "gg_os"
version = "0.1.0"
authors = ["ggandy"]

[lib]
crate-type = ["staticlib"]

[dependencies]
volatile = "0.2.3"
spin = "0.4.6"
uart_16550 = "0.1.0"
x86_64 = "0.2.8"
pic8259_simple = "0.1.1"
cpuio = "0.2.0"
multiboot2 = "0.7.1"
bitflags = "1.0"
once = "0.3.3"
rlibc = "1.0.0"
linked_list_allocator = "0.6.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
